fix(spacing): fix spacing on single blog post page

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -162,7 +162,7 @@ a {
   }
 
   @include medium {
-    padding: 2rem 4rem;
+    padding: 2rem 4rem 0;
     font-size: 1.1rem;
   }
 
